Correct test for if we want to export unix version
git-svn-id: http://subversion.assembla.com/svn/Debrief@1566 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -127,7 +127,7 @@
 		<echo message="building:${dist-title}" />
 
 		<!-- find out what we're doing -->
-        <input message="Build unix/mac dist? (y/n)?" defaultvalue="n" validargs="y,n" addproperty="do.linux" />
+        <input message="Build unix/mac dist? (y/n)?" defaultvalue="n" validargs="y,n" addproperty="do.linux.answer" />
         <input message="Export to internet? (y/n)?" defaultvalue="n" validargs="y,n" addproperty="do.internet.answer" />
 		<input message="Build installer? (y/n)?" defaultvalue="n" validargs="y,n" addproperty="do.installer.answer" />
 		<input message="Export to removeable media? (y/n)?" defaultvalue="y" validargs="y,n" addproperty="do.zipDrive.answer" />
