--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -6,6 +6,11 @@
 	<!-- path to the installer (exec command won't take relative path reference -->
 	<property name="advancedInstallerPath" value="d:\dev\cmap\contribs\advancedinstaller\" />
 
+	<!-- and the zip support filenames -->
+    <property name="zipName" value="update.zip"/>
+    <property name="zipDest" value="${deployDir}/${zipName}"/>
+	
+	
 	<target name="clean" description="clear the output directory" depends="">
 	</target>
 
@@ -68,14 +73,9 @@
 
 	<target name="copyUpdateToZip" description="copy updates to zipDrv" if="zip.drivePresent" depends="">
         <echo message="zip drive found" />
-        <property name="zipName" value="update.zip"/>
-        <property name="zipDest" value="${deployDir}/${zipName}"/>
-        <echo message="ditching old update zip" />
-        <delete file="h:/${zipDest}"/>
-        <echo message="creating new update zip" />
-		<zip destFile="${zipDest}" whenempty="fail" duplicate="fail">
-			<fileset dir="../org.mwc.cmap.installer" excludes="**/*.static*.*, *build.xml,*.aip,.svn,unpack.xml,setup.nsi,statcvs_template" />
-		</zip>
+		
+		<antcall target="zipTheData"/>
+		
         <echo message="ditching old zip from zip drive" />
         <delete file="h:/${zipName}"/>
         <echo message="copying new zip to zip drive" />
@@ -83,6 +83,16 @@
 	    <echo message="copying unpack script to zip drive" />
 		<copy file="unpack.xml" todir="h:/" />
 	</target>
+	
+	<target name="zipTheData" description="create the zip file for exporting">
+        <echo message="ditching old update zip" />
+        <delete file="h:/${zipDest}"/>
+        <echo message="creating new update zip" />
+		<zip destFile="${zipDest}" whenempty="fail" duplicate="fail">
+			<fileset dir="../org.mwc.cmap.installer" excludes="**/*.static*.*, *build.xml,*.aip,.svn,unpack.xml,setup.nsi,statcvs_template" />
+		</zip>
+	</target>
+	
 
 	<target name="prepareUpdateToZip" description="copy updates to zipDrv" if="do.zipDrive" depends="">
 		<echo message="checking zip present" />
