--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -9,7 +9,8 @@
 	<!-- and the zip support filenames -->
     <property name="zipName" value="update.zip"/>
     <property name="zipDest" value="${deployDir}/${zipName}"/>
-	<property name="zipPath" value="/media/cdrom0"/>
+	<property name="zipPath" value="/media/disk"/>
+<!--	<property name="zipPath" value="/media/cdrom0"/> -->
 	<!-- <property name="zipPath" value="h:/"/> -->
 	
 	
