Get build working.  Add ability to load control file into scenario plotter.
git-svn-id: http://subversion.assembla.com/svn/Debrief@1624 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -36,4 +36,28 @@
          point="org.eclipse.ui.startup">
       <startup class="org.mwc.asset.core.ASSETPlugin"/>
    </extension>
+   <extension
+         id="ASSET"
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="org.eclipse.ui.ide.workbench"
+            name="AssetNG">
+         <property
+               name="windowImages"
+               value="icons/components.gif">
+         </property>
+         <property
+               name="aboutText"
+               value="Welcome to ASSET NG, from the Maritime Warfare Centre">
+         </property>
+         <property
+               name="aboutImage"
+               value="platform:/plugin/org.mwc.debrief.core/icons/new_logo2.gif">
+         </property>
+         <property
+               name="appName"
+               value="AssetNG">
+         </property>
+      </product>
+   </extension>
 </plugin>
