Make the view naming consistent
git-svn-id: http://subversion.assembla.com/svn/Debrief@1653 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.SensorMonitor/plugin.xml
+++ b/trunk/org.mwc.asset.SensorMonitor/plugin.xml
@@ -9,7 +9,7 @@
             category="org.mwc.asset.core.simulation.category"
             class="org.mwc.asset.sensormonitor.views.SensorMonitor"
             icon="icons/Binocular.gif"
-            id="org.mwc.asset.sensormonitor.views.SensorMonitor"
+            id="org.mwc.asset.SensorMonitor"
             name="Sensor Monitor">
       </view>
    </extension>
