lots of tidying
git-svn-id: http://subversion.assembla.com/svn/Debrief@1688 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/narrative.viewer/plugin.xml
+++ b/trunk/narrative.viewer/plugin.xml
@@ -24,6 +24,7 @@
       <view
             category="org.mwc.cmap.plotViewer.CMAP"
             class="com.borlander.ianmayo.nviewer.app.NViewerView"
+            icon="icons/list_comments.gif"
             id="com.borlander.ianmayo.nviewer.app.view"
             name="Narrative Viewer">
       </view>
