Deprecate old narrative viewer (just by changing name at this point)
git-svn-id: http://subversion.assembla.com/svn/Debrief@1690 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.narrative/plugin.xml
+++ b/trunk/org.mwc.cmap.narrative/plugin.xml
@@ -5,7 +5,7 @@
      <extension
          point="org.eclipse.ui.views">
       <view
-            name="Narrative Viewer"
+            name="Narrative Viewer (legacy)"
             icon="icons/list_comments.gif"
             category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.cmap.narrative.views.NarrativeView"
