--- a/trunk/org.mwc.cmap.TimeController/plugin.xml
+++ b/trunk/org.mwc.cmap.TimeController/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.cmap.TimeController"
    name="Time Controller Plug-in"
-   version="1.0.17"
+   version="1.0.18"
    provider-name="MWC"
    class="org.mwc.cmap.TimeController.TimeControllerPlugin">
 
@@ -30,7 +30,7 @@
          point="org.eclipse.ui.views">
       <view
             name="Time Controller"
-            icon="icons/TrafficGreen.gif"
+            icon="icons/clock.png"
             category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.cmap.TimeController.views.TimeController"
             id="org.mwc.cmap.TimeController.views.TimeController">
