reflect new path to zip drive
git-svn-id: http://subversion.assembla.com/svn/Debrief@1729 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -9,7 +9,7 @@
 	<!-- and the zip support filenames -->
     <property name="zipName" value="update.zip"/>
     <property name="zipDest" value="${deployDir}/${zipName}"/>
-	<property name="zipPath" value="/media/zip"/>
+	<property name="zipPath" value="/Volumes/Untitled/"/>
 <!--	<property name="zipPath" value="/media/cdrom0"/> -->
 <!--	<property name="zipPath" value="f:/"/> --> 
 	
