--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.debrief.core"
    name="Debrief Core"
-   version="1.0.48"
+   version="1.0.49"
    provider-name="MWC"
    class="org.mwc.debrief.core.DebriefPlugin">
 
@@ -53,7 +53,7 @@
          point="org.mwc.debrief.core.DebriefPlotLoader">
       <loader
             class="org.mwc.debrief.core.loaders.ReplayLoader"
-            extensions="rep;dsf"
+            extensions="rep;dsf;dtf"
             name="ReplayLoader"/>
    </extension>
    <extension
