--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -9,9 +9,9 @@
 	<!-- and the zip support filenames -->
     <property name="zipName" value="update.zip"/>
     <property name="zipDest" value="${deployDir}/${zipName}"/>
-	<property name="zipPath" value="/Volumes/Untitled/"/>
+<!--	<property name="zipPath" value="/Volumes/Untitled/"/> -->
 <!--	<property name="zipPath" value="/media/cdrom0"/> -->
-<!--	<property name="zipPath" value="f:/"/> --> 
+	<property name="zipPath" value="e:/"/> 
 	
 	
 	<target name="clean" description="clear the output directory" depends="">
