Fix the fix (detailed time controller fix not implemented correctly)
git-svn-id: http://subversion.assembla.com/svn/Debrief@1763 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.TimeController.feature/.project
+++ b/trunk/org.mwc.cmap.TimeController.feature/.project
@@ -2,13 +2,11 @@
 <projectDescription>
 	<name>org.mwc.cmap.TimeController.feature</name>
 	<comment></comment>
-	<projects>
-	</projects>
+	<projects></projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.pde.FeatureBuilder</name>
-			<arguments>
-			</arguments>
+			<arguments></arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
