update libs to get build working again in new Eclipse
git-svn-id: http://subversion.assembla.com/svn/Debrief@1823 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -52,7 +52,7 @@
          </property>
          <property
                name="aboutImage"
-               value="platform:/plugin/org.mwc.debrief.core/icons/new_logo2.gif">
+               value="icons/WorkBenchLogo.gif">
          </property>
          <property
                name="appName"
