--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -58,6 +58,14 @@
                name="appName"
                value="AssetNG">
          </property>
+         <property
+               name="startupProgressRect"
+               value="5,275,445,15">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
+         </property>
       </product>
    </extension>
 </plugin>
