--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.cmap.core"
    name="CMap Core Resources Plug-in"
-   version="1.0.57"
+   version="1.0.58"
    provider-name="MWC"
    class="org.mwc.cmap.core.CorePlugin">
 
@@ -29,6 +29,7 @@
       <import plugin="org.eclipse.ui.cheatsheets"/>
       <import plugin="org.eclipse.ui.forms"/>
       <import plugin="org.mwc.debrief.legacy"/>
+      <import plugin="org.eclipse.equinox.p2.updatechecker" version="1.0.0"/>
    </requires>
    
 
