feature update, experiment with p2 bits
git-svn-id: http://subversion.assembla.com/svn/Debrief@1841 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/build.properties
+++ b/trunk/org.mwc.debrief.core/build.properties
@@ -8,3 +8,11 @@ bin.includes = plugin.xml,\
                images/,\
                plugin_customization.ini,\
                intro_content/
+generate.p2.metadata=true 
+p2.metadata.repo = file:${buildDirectory}/repo 
+p2.artifact.repo = file:${buildDirectory}/repo 
+p2.metadata.repo.name = Debrief Metadata 
+p2.artifact.repo.name = Debrief Artifacts 
+p2.flavor = tooling 
+p2.publish.artifacts=true 
+               
