--- a/trunk/org.mwc.cmap.legacy/build.properties
+++ b/trunk/org.mwc.cmap.legacy/build.properties
@@ -1,7 +1,8 @@
 output.cmap_legacy.jar = bin/
 bin.includes = plugin.xml,\
                cmap_legacy.jar,\
-               libs/
+               libs/,\
+               META-INF/
 jars.compile.order = cmap_legacy.jar
 source.cmap_legacy.jar = src/
 src.includes = src/,\
