--- a/trunk/org.mwc.debrief.legacy/plugin.xml
+++ b/trunk/org.mwc.debrief.legacy/plugin.xml
@@ -1,22 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.mwc.debrief.legacy"
-   name="Legacy Plug-in"
-   version="1.0.57"
-   provider-name="MWC">
+<plugin>
 
-   <runtime>
-      <library name="debrief_legacy.jar">
-         <export name="*"/>
-      </library>
-      <library name="libs/jcommon-0.7.1.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-   <requires>
-      <import plugin="org.mwc.cmap.legacy"/>
-      <import plugin="org.junit"/>
-   </requires>
-
+    
 </plugin>
