--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.debrief.core"
    name="Debrief Core"
-   version="1.0.52"
+   version="1.0.53"
    provider-name="MWC"
    class="org.mwc.debrief.core.DebriefPlugin">
 
@@ -205,6 +205,15 @@
                label="&amp;Grid"
                menubarPath="org.mwc.debrief.core.EditorFeatures/features"
                style="push"/>
+
+         <action
+               class="org.mwc.debrief.core.creators.chartFeatures.Insert4WGrid"
+               icon="icons/grid4w.gif"
+               id="org.mwc.debrief.core.creators.chartFeatures.Insert4WGrid"
+               label="&amp;4W Grid"
+               menubarPath="org.mwc.debrief.core.EditorFeatures/features"
+               style="push"/>
+
 
 
          <action
