Give user option to create new target layer when adding drawing feature
git-svn-id: http://subversion.assembla.com/svn/Debrief@1851 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.debrief.core"
    name="Debrief Core"
-   version="1.0.53"
+   version="1.0.54"
    provider-name="MWC"
    class="org.mwc.debrief.core.DebriefPlugin">
 
@@ -206,14 +206,6 @@
                menubarPath="org.mwc.debrief.core.EditorFeatures/features"
                style="push"/>
 
-         <action
-               class="org.mwc.debrief.core.creators.chartFeatures.Insert4WGrid"
-               icon="icons/grid4w.gif"
-               id="org.mwc.debrief.core.creators.chartFeatures.Insert4WGrid"
-               label="&amp;4W Grid"
-               menubarPath="org.mwc.debrief.core.EditorFeatures/features"
-               style="push"/>
-
 
 
          <action
@@ -234,6 +226,14 @@
                style="push"
                toolbarPath="org.mwc.debrief.core.EditorShapes/shapes"/>
 
+
+         <action
+               class="org.mwc.debrief.core.creators.chartFeatures.Insert4WGrid"
+               icon="icons/grid4w.gif"
+               id="org.mwc.debrief.core.creators.chartFeatures.Insert4WGrid"
+               label="&amp;4W Grid"
+               menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
+               style="push"/>
 
          <action
                class="org.mwc.debrief.core.creators.shapes.InsertCircle"
