Fix build file definition, fix problem caused by cast when outputting debug lines
git-svn-id: http://subversion.assembla.com/svn/Debrief@1867 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.VesselMonitor/build.properties
+++ b/trunk/org.mwc.asset.VesselMonitor/build.properties
@@ -1,10 +1,8 @@
-source.VesselMonitor.jar = src/,\
-                           libs/,\
-                           images/
-output.VesselMonitor.jar = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               VesselMonitor.jar,\
                icons/,\
                images/,\
                libs/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
