Textual build file tidying.  Zero warnings remaining!
git-svn-id: http://subversion.assembla.com/svn/Debrief@1884 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/build.properties
+++ b/trunk/org.mwc.asset.core/build.properties
@@ -2,7 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               asset.core.jar
+               plugin.xml,\
+              asset.core.jar
 jars.compile.order = .,\
                      asset.core.jar
-source.asset.core.jar = 
+source.asset.core.jar = .
