--- a/trunk/org.mwc.asset.VesselMonitor/build.properties
+++ b/trunk/org.mwc.asset.VesselMonitor/build.properties
@@ -1,8 +1,8 @@
+source.VesselMonitor.jar = src/
+output.VesselMonitor.jar = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
                images/,\
+               VesselMonitor.jar,\
                libs/
-jars.compile.order = .
-source.. = src/
-output.. = bin/
