ditch JFreeChart sources (just use existing lib)
git-svn-id: http://subversion.assembla.com/svn/Debrief@1895 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.waterfall_core/.classpath
+++ b/trunk/org.mwc.cmap.waterfall_core/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jcommon-1.0.15.jar"/>
 	<classpathentry kind="lib" path="lib/servlet.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
