--- a/trunk/org.mwc.asset.ScenarioController2/plugin.xml
+++ b/trunk/org.mwc.asset.ScenarioController2/plugin.xml
@@ -4,35 +4,13 @@
 
    <extension
          point="org.eclipse.ui.views">
-      <category
-            name="Sample Category"
-            id="org.mwc.asset.ScenarioController2">
-      </category>
       <view
-            name="Scenario controller"
-            icon="icons/sample.gif"
-            category="org.mwc.asset.ScenarioController2"
+            name="Scenario controller 2"
+            icon="icons/gears_run.png"
+            category="org.mwc.asset.core.simulation.category"
             class="org.mwc.asset.scenariocontroller2.views.ScenarioController"
             id="org.mwc.asset.scenariocontroller2.views.ScenarioController">
       </view>
-   </extension>
-   <extension
-         point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="org.eclipse.jdt.ui.JavaPerspective">
-         <view
-               ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
-               id="org.mwc.asset.scenariocontroller2.views.ScenarioController">
-         </view>
-      </perspectiveExtension>
-   </extension>
-   <extension
-         point="org.eclipse.help.contexts">
-      <contexts
-            file="contexts.xml">
-      </contexts>
    </extension>
 
 </plugin>
