--- a/trunk/org.mwc.asset.ScenarioController2/.classpath
+++ b/trunk/org.mwc.asset.ScenarioController2/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/apps/eclipse-rcp-ganymede-SR2-win32/eclipse/plugins/org.eclipse.swt.win32.win32.x86_3.4.1.v3452b.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
