--- a/trunk/org.mwc.asset.ScenarioController2/plugin.xml
+++ b/trunk/org.mwc.asset.ScenarioController2/plugin.xml
@@ -9,7 +9,7 @@
             icon="icons/gears_run.png"
             category="org.mwc.asset.core.simulation.category"
             class="org.mwc.asset.scenariocontroller2.views.ScenarioController"
-            id="org.mwc.asset.scenariocontroller2.views.ScenarioController">
+            id="org.mwc.asset.ScenarioController2">
       </view>
    </extension>
 
