--- a/trunk/org.mwc.asset.ScenarioPlotter/plugin.xml
+++ b/trunk/org.mwc.asset.ScenarioPlotter/plugin.xml
@@ -7,10 +7,16 @@
       <editor
             name="ASSET Plot Editor"
             extensions="xml"
-            icon="icons/sample.gif"
+            icon="icons/components.png"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             class="org.mwc.asset.scenarioplotter.editors.ASSETPlotEditor"
             id="org.mwc.asset.ASSETPlotEditor">
+	      <contentTypeBinding
+	         contentTypeId="org.mwc.asset.contenttype.ScenarioFile">
+	      </contentTypeBinding>            
+	      <contentTypeBinding
+	         contentTypeId="org.mwc.asset.contenttype.ControlFile">
+	      </contentTypeBinding>            
       </editor>
    </extension>
 
