--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -64,4 +64,30 @@
          </property>
       </product>
    </extension>
+   
+   <extension point="org.eclipse.core.contenttype.contentTypes">
+   <content-type base-type="org.eclipse.core.runtime.xml"
+                 file-extensions="xml"
+                 id="org.mwc.asset.contenttype.ControlFile"
+                 name="ASSET Control File"
+                 priority="normal">
+      <describer class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber">
+         <parameter name="element"
+                    value="ScenarioController">
+         </parameter>
+      </describer>
+   	</content-type>
+   <content-type base-type="org.eclipse.core.runtime.xml"
+                 file-extensions="xml"
+                 id="org.mwc.asset.contenttype.ScenarioFile"
+                 name="ASSET Scenario File"
+                 priority="normal">
+      <describer class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber">
+         <parameter name="element"
+                    value="Scenario">
+         </parameter>
+      </describer>
+   	</content-type>
+	</extension>
+   
 </plugin>
