lots more implementation
git-svn-id: http://subversion.assembla.com/svn/Debrief@1987 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.legacy/.classpath
+++ b/trunk/org.mwc.asset.legacy/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="lib" path="libs/parser.jar"/>
 	<classpathentry kind="lib" path="libs/saxpath.jar"/>
 	<classpathentry kind="lib" path="libs/xerces.jar"/>
+	<classpathentry kind="lib" path="libs/postgis_1.3.5.jar"/>
+	<classpathentry kind="lib" path="libs/postgresql-8.3-604.jdbc4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
